; ModuleID = '/home/carl/AnghaBench/libgit2/tests/filter/extr_custom.c_register_custom_filters.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/filter/extr_custom.c_register_custom_filters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@register_custom_filters.filters_registered = internal global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"bitflip\00", align 1
@BITFLIP_FILTER_PRIORITY = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"reverse\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"+reverse\00", align 1
@REVERSE_FILTER_PRIORITY = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [12 x i8] c"pre-reverse\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"+prereverse\00", align 1
@GIT_FILTER_DRIVER_PRIORITY = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [10 x i8] c"erroneous\00", align 1
@.str.6 = private unnamed_addr constant [11 x i8] c"+erroneous\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @register_custom_filters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @register_custom_filters() #0 {
  %1 = load i32, i32* @register_custom_filters.filters_registered, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %20, label %3

3:                                                ; preds = %0
  %4 = call i32 (...) @create_bitflip_filter()
  %5 = load i32, i32* @BITFLIP_FILTER_PRIORITY, align 4
  %6 = call i32 @git_filter_register(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %4, i32 %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = call i32 @create_reverse_filter(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  %9 = load i32, i32* @REVERSE_FILTER_PRIORITY, align 4
  %10 = call i32 @git_filter_register(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %8, i32 %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = call i32 @create_reverse_filter(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0))
  %13 = load i32, i32* @GIT_FILTER_DRIVER_PRIORITY, align 4
  %14 = call i32 @git_filter_register(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0), i32 %12, i32 %13)
  %15 = call i32 @cl_git_pass(i32 %14)
  %16 = call i32 @create_erroneous_filter(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.6, i64 0, i64 0))
  %17 = load i32, i32* @GIT_FILTER_DRIVER_PRIORITY, align 4
  %18 = call i32 @git_filter_register(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.5, i64 0, i64 0), i32 %16, i32 %17)
  %19 = call i32 @cl_git_pass(i32 %18)
  store i32 1, i32* @register_custom_filters.filters_registered, align 4
  br label %20

20:                                               ; preds = %3, %0
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_filter_register(i8*, i32, i32) #1

declare dso_local i32 @create_bitflip_filter(...) #1

declare dso_local i32 @create_reverse_filter(i8*) #1

declare dso_local i32 @create_erroneous_filter(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
